# CC0

./: CMakeLists.txt  README.md  fmts.hpp  main.cpp
analyser/: analyser.cpp  analyser.h
error/: error.h
src/: file.cpp
src/util/: print.hpp  util.hpp
tests/: test_tokenizer.cpp
tokenizer/: token.h  tokenizer.cpp  tokenizer.h  utils.hpp
type/: constans.h  funciton.h  instruction.h  varstable.h
